overflowin issue fixed

--- a/src/components/Tweet.module.css
+++ b/src/components/Tweet.module.css
@@ -1,5 +1,5 @@
 .tweet {
-  width: 100%;
+  width: 90%;
   margin: 1rem auto;
   border: 2px solid pink;
   border-radius: .5rem;
